# lisheng

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT.md  README.md  REVIEW.md  cleardb.sh  deploy-remote.sh  deploy.sh  docker-compose.yml  docker-deploy.sh  initdb.sh
backend/: .env.example  .gitignore  Dockerfile  README.md  config.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  security.py
backend/app/middleware/: __init__.py  permission.py
backend/app/models/: __init__.py  address.py  agent.py  cart.py  operation_log.py  order.py  payment.py  product.py  (+16 more)
backend/migrations/: 002_add_payment_and_order_fields.sql  003_add_user_addresses.sql  004_add_order_shipment.sql  005_add_product_image_detail.sql  006_add_shop_agent_name.sql  007_change_shop_referrer_to_agent.sql  008_add_wallet_tables.sql  009_add_store_applications.py  009_add_store_applications.sql  add_product_profit_rate.sql
backend/scripts/: README.md  add_phone_number_to_users.py  add_shop_location_columns.py  add_supplier_id_to_users.py  create_admin.py  create_admin_user.py  create_indexes.py  fix_users_primary_key.py  init_db.py  init_henan_mock_data.py  init_mock_data.py  init_permissions.py  migrate_order_verification.py  migrate_permissions.py  migrate_role_type_removal.py  reset_admin_password.py  reset_password.py
backend/tests/: conftest.py  test_addresses.py  test_admin_orders.py  test_auth.py  test_operation_logs.py  test_orders.py  test_products.py  test_roles.py  test_users.py  test_wallet.py
(+222 files in other folders)
