[project]
name = "channel-sales-backend"
version = "0.1.0"
description = "渠道客户管理系统 - Python FastAPI 后端"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py310"
